objects/Newstar_State__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newstar_Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>NEWSTAR Country</label>
        <referenceTo>Newstar_Country__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Newstar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Newstar ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newstar_Sync_Status__c</fullName>
        <label>Newstar Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NEWSTAR States</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NEWSTAR States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>